--- a/beets/service.yml
+++ b/beets/service.yml
@@ -1,30 +1,30 @@
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: beets-stream
-  labels:
-    app: beets
-spec:
-  ports:
-  - name: stream
-    port: 8080
-  selector:
-    app: beets
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: beets-control
-  labels:
-    app: beets
-spec:
-  type: ClusterIP
-  externalIPs:
-  - 62.210.14.17
-  ports:
-  - name: db
-    port: 6600
-    targetPort: 6600
-  selector:
-    app: beets
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: beets-stream
+#   labels:
+#     app: beets
+# spec:
+#   ports:
+#   - name: stream
+#     port: 8080
+#   selector:
+#     app: beets
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: beets-control
+#   labels:
+#     app: beets
+# spec:
+#   type: ClusterIP
+#   externalIPs:
+#   - 62.210.14.17
+#   ports:
+#   - name: db
+#     port: 6600
+#     targetPort: 6600
+#   selector:
+#     app: beets
