--- a/rocketchat/deploy.yml
+++ b/rocketchat/deploy.yml
@@ -95,12 +95,12 @@ spec:
         ports:
         - name: http
           containerPort: 3000
-        livenessProbe:
-          httpGet:
-            path: /
-            port: http
-          initialDelaySeconds: 60
-          timeoutSeconds: 5
+          # livenessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: http
+          #   initialDelaySeconds: 60
+          #   timeoutSeconds: 5
         resources:
           requests:
             memory: 512Mi
