--- a/syncthing/service.yml
+++ b/syncthing/service.yml
@@ -1,12 +1,29 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sonarr
+  name: syncthing
   labels:
-    app: sonarr
+    app: syncthing
+spec:
+  ports:
+  - name: server
+    port: 22000
+  - name: discover
+    port: 21027
+  selector:
+    app: syncthing
+  externalIPs:
+  - 62.210.14.17
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: syncthing-ui
+  labels:
+    app: syncthing
 spec:
   ports:
   - name: http
-    port: 8989
+    port: 8384
   selector:
-    app: sonarr
+    app: syncthing
